=== Bump Gimmix to version 0.2.1-RC2 === Probably the last RC before release :) gimmix-interface.c: added keybindings for repeat and shuffle buttons. gimmix.glade: display key name for shuffle and repeat button tooltips. many small fixes.

--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -2507,7 +2507,7 @@ Note: The directory should be same as what you specified in your mpd settings. I
 			  <child>
 			    <widget class="GtkToggleButton" id="repeat_toggle">
 			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Repeat</property>
+			      <property name="tooltip" translatable="yes">Repeat &lt;r&gt;</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
 			      <property name="active">False</property>
@@ -2535,7 +2535,7 @@ Note: The directory should be same as what you specified in your mpd settings. I
 			  <child>
 			    <widget class="GtkToggleButton" id="shuffle_toggle">
 			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Shuffle</property>
+			      <property name="tooltip" translatable="yes">Shuffle &lt;s&gt;</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
 			      <property name="active">False</property>
