--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -4,8 +4,8 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="prefs_window">
-  <property name="width_request">500</property>
-  <property name="height_request">298</property>
+  <property name="width_request">395</property>
+  <property name="height_request">275</property>
   <property name="title" translatable="yes">Preferences</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
@@ -28,13 +28,13 @@
       <property name="spacing">0</property>
 
       <child>
-	<widget class="GtkNotebook" id="notebook2">
+	<widget class="GtkNotebook" id="pref_notebook">
 	  <property name="border_width">8</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="show_tabs">True</property>
 	  <property name="show_border">True</property>
-	  <property name="tab_pos">GTK_POS_LEFT</property>
+	  <property name="tab_pos">GTK_POS_TOP</property>
 	  <property name="scrollable">False</property>
 	  <property name="enable_popup">False</property>
 
@@ -483,10 +483,9 @@
 		      <child>
 			<widget class="GtkLabel" id="label46">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Please select the directory where your songs are stored.
+			  <property name="label" translatable="yes">Please select the directory where your songs are stored. 
 &lt;b&gt;Note:&lt;/b&gt; The directory should be same as what you specified in your mpd settings.
-
-If you're not sure, check your mpd configuration file (/etc/mpd.conf on most systems).</property>
+ If you're not sure, check your mpd configuration file (/etc/mpd.conf on most systems).</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
