--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -372,7 +372,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label53">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Crossfade Timeout :</property>
+				  <property name="label" translatable="yes">Fade Time :</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -405,7 +405,7 @@
 				  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 				  <property name="snap_to_ticks">False</property>
 				  <property name="wrap">False</property>
-				  <property name="adjustment">0 0 10 1 10 10</property>
+				  <property name="adjustment">0 0 15 1 10 10</property>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
