--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -3104,6 +3104,7 @@ Filename
 
 	      <child>
 		<widget class="GtkLabel" id="gimmix_status">
+		  <property name="visible">True</property>
 		  <property name="label" translatable="yes"></property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">False</property>
@@ -3120,8 +3121,8 @@ Filename
 		  <property name="angle">0</property>
 		</widget>
 		<packing>
-		  <property name="padding">5</property>
-		  <property name="expand">True</property>
+		  <property name="padding">3</property>
+		  <property name="expand">False</property>
 		  <property name="fill">False</property>
 		</packing>
 	      </child>
