--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -389,7 +389,7 @@
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkVBox" id="vbox1">
+                          <widget class="GtkVBox" id="lyricsvbox">
                             <property name="visible">True</property>
                             <child>
                               <widget class="GtkVBox" id="vbox2">
