--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -92,6 +92,24 @@
                       </packing>
                     </child>
                     <child>
+                      <widget class="GtkButton" id="info_button">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="tooltip" translatable="yes">Song Info &lt;i&gt;</property>
+                        <property name="response_id">0</property>
+                        <child>
+                          <widget class="GtkImage" id="image24">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-info</property>
+                            <property name="icon_size">1</property>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
+                    <child>
                       <widget class="GtkButton" id="volume_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
@@ -107,7 +125,7 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">4</property>
+                        <property name="position">5</property>
                       </packing>
                     </child>
                   </widget>
@@ -192,16 +210,32 @@
                   <widget class="GtkAlignment" id="alignment3">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkButton" id="info_button">
+                      <widget class="GtkButton" id="pref_button">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="tooltip" translatable="yes">Song Info &lt;i&gt;</property>
+                        <property name="tooltip" translatable="yes">Configure Gimmix</property>
                         <property name="response_id">0</property>
                         <child>
-                          <widget class="GtkImage" id="image24">
+                          <widget class="GtkAlignment" id="alignment2">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-info</property>
-                            <property name="icon_size">1</property>
+                            <property name="xscale">0</property>
+                            <property name="yscale">0</property>
+                            <child>
+                              <widget class="GtkHBox" id="hbox23">
+                                <property name="visible">True</property>
+                                <property name="spacing">2</property>
+                                <child>
+                                  <widget class="GtkImage" id="image28">
+                                    <property name="visible">True</property>
+                                    <property name="stock">gtk-preferences</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">False</property>
+                                  </packing>
+                                </child>
+                              </widget>
+                            </child>
                           </widget>
                         </child>
                       </widget>
@@ -412,40 +446,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkButton" id="pref_button">
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="tooltip" translatable="yes">Configure Gimmix</property>
-                                        <property name="response_id">0</property>
-                                        <child>
-                                          <widget class="GtkAlignment" id="alignment2">
-                                            <property name="visible">True</property>
-                                            <property name="xscale">0</property>
-                                            <property name="yscale">0</property>
-                                            <child>
-                                              <widget class="GtkHBox" id="hbox23">
-                                                <property name="visible">True</property>
-                                                <property name="spacing">2</property>
-                                                <child>
-                                                  <widget class="GtkImage" id="image28">
-                                                    <property name="visible">True</property>
-                                                    <property name="stock">gtk-preferences</property>
-                                                  </widget>
-                                                  <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">False</property>
-                                                  </packing>
-                                                </child>
-                                              </widget>
-                                            </child>
-                                          </widget>
-                                        </child>
-                                      </widget>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="fill">False</property>
-                                        <property name="position">7</property>
-                                      </packing>
+                                      <placeholder/>
                                     </child>
                                     <child>
                                       <widget class="GtkVSeparator" id="vseparator2">
